// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be active 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-size: 11px;
  color: #929598;
  margin: 0 0 8px;
}

.c1 {
  font-family: Montserrat,sans-serif;
  font-size: 24px;
  font-weight: 500;
  color: #001217;
  padding: 0 0 15px;
  position: relative;
  display: inline-block;
}

.c1:after {
  content: '';
  position: absolute;
  height: 2px;
  width: 100%;
  bottom: 0;
  left: 0;
  z-index: 1;
}

.c1:after {
  background: #00aeef;
}

<div>
  <div>
    <div
      class="c0"
      color="#929598"
      font-family="Montserrat, sans-serif"
      font-size="11px"
    >
      test
    </div>
    <span
      class="c1"
      color="#001217"
      font-family="Montserrat, sans-serif"
      font-size="24px"
      font-weight="500"
    >
      15.10.2018
    </span>
  </div>
</div>
`;

exports[`should be unactive 1`] = `
.c0 {
  font-family: Montserrat,sans-serif;
  font-size: 11px;
  color: #929598;
  margin: 0 0 8px;
}

.c1 {
  font-family: Montserrat,sans-serif;
  font-size: 24px;
  font-weight: 500;
  color: #001217;
  padding: 0 0 15px;
  position: relative;
  display: inline-block;
}

.c1:after {
  content: '';
  position: absolute;
  height: 2px;
  width: 100%;
  bottom: 0;
  left: 0;
  z-index: 1;
}

<div>
  <div>
    <div
      class="c0"
      color="#929598"
      font-family="Montserrat, sans-serif"
      font-size="11px"
    >
      test
    </div>
    <span
      class="c1"
      color="#001217"
      font-family="Montserrat, sans-serif"
      font-size="24px"
      font-weight="500"
    >
      15.10.2018
    </span>
  </div>
</div>
`;
